web: fix filter options alignment
- fix filter folder header horizontal alignment
- fix filter option buttons and icons vertical alignment

^fox-64869

--- a/apps/web/src/scss/vault-filters.scss
+++ b/apps/web/src/scss/vault-filters.scss
@@ -90,10 +90,6 @@
       justify-content: flex-start;
       align-items: baseline;
       line-height: 1.5rem;
-      padding-bottom: 5px;
-      button.filter-button {
-        margin-top: 3px;
-      }
       button.filter-button > i.text-muted {
         align-self: flex-start;
       }
@@ -138,7 +134,6 @@
   .fa-li {
     align-self: flex-start;
     position: static;
-    margin-top: 8px;
     text-align: center;
     width: 1.2857142857em;
   }
@@ -165,6 +160,27 @@ ul.filter-options > li.filter-option > span.filter-buttons {
 
       .edit-button {
         visibility: visible;
+      }
+    }
+  }
+}
+// filter options and buttons vertical spacing
+// filter-button containers should have no spacing
+// filter-button vertical margin should set height to container 'li'
+ul.filter-options li.filter-option {
+  span.filter-buttons {
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    .filter-button {
+      margin: 6px 0;
+      // Icons in buttons should have no vertica padding
+      .fa {
+        padding-top: 0;
+        padding-bottom: 0;
+        margin-top: 0;
+        margin-bottom: 0;
       }
     }
   }
